Alignment fixed

--- a/src/pages/components/header/header.module.scss
+++ b/src/pages/components/header/header.module.scss
@@ -84,6 +84,7 @@
 .expanded {
     display: flex;
     flex-direction: column;
+    align-items: start;
 }
 
 
